feat: 使用 malilib 重写设置界面
- 新增 WayfarerConfigs/WayfarerHotkeys/WayfarerConfigScreen/WayfarerInitHandler/Reference
- WayfarerConfig 适配 malilib ConfigManager，14 项配置（宽度/分级/TileProvider/记录热键）
- 三版本均注入 InitHandler，设置按钮替换为 malilib 的 GuiModConfigs
- 修复 spotlessStyling 因找不到 node/npm 导致 build 失败，排除 fabric.mod.json
- 删除旧 SettingsScreen