@@ -16,113 +16,62 @@
  */
 package com.ecjkim.wayfarer.client;
 
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
-import com.mojang.blaze3d.platform.InputConstants;
+import com.ecjkim.wayfarer.client.config.WayfarerConfigs;
+import com.ecjkim.wayfarer.client.config.WayfarerHotkeys;
 
-import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
-
-import org.lwjgl.glfw.GLFW;
+import fi.dy.masa.malilib.config.ConfigManager;
+import fi.dy.masa.malilib.config.options.ConfigHotkey;
+import fi.dy.masa.malilib.hotkeys.IKeybind;
 
 public class WayfarerConfig {
-    private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
-    private static final Path CONFIG_PATH =
-        Path.of(System.getProperty("user.dir"), "config", "wayfarer", "settings.json");
-
     private static WayfarerConfig instance;
 
-    public boolean useClassificationWidth = false;
-    public Map<String, Double> classificationWidths = defaultClassificationWidths();
-    public double defaultWidth = 7.0;
-    public String defaultClassification = "";
-    public String tileProviderMode = "AUTO";
-    public Map<String, List<HotkeyBind>> hotkeys = defaultHotkeys();
+    public final double defaultWidth;
+    public final String defaultClassification;
+    public final boolean useClassificationWidth;
+    public final Map<String, Integer> classificationWidths;
+    public String tileProviderMode;
 
-    private WayfarerConfig() {}
+    private WayfarerConfig() {
+        this.defaultWidth = WayfarerConfigs.Generic.DEFAULT_WIDTH.getDoubleValue();
+        this.defaultClassification = WayfarerConfigs.Generic.DEFAULT_CLASSIFICATION.getStringValue();
+        this.useClassificationWidth = WayfarerConfigs.Generic.USE_CLASSIFICATION_WIDTH.getBooleanValue();
+        this.classificationWidths = WayfarerConfigs.Generic.getClassificationWidths();
+        this.tileProviderMode =
+            ((WayfarerConfigs.TileProviderMode)WayfarerConfigs.Generic.TILE_PROVIDER_MODE.getOptionListValue()).name();
+    }
 
     public static WayfarerConfig getInstance() {
         if (instance == null) {
-            instance = load();
+            instance = new WayfarerConfig();
         }
         return instance;
     }
 
-    public static WayfarerConfig load() {
-        if (!Files.exists(CONFIG_PATH)) {
-            WayfarerConfig config = new WayfarerConfig();
-            config.save();
-            return config;
-        }
-        try {
-            String json = Files.readString(CONFIG_PATH, StandardCharsets.UTF_8);
-            WayfarerConfig config = GSON.fromJson(json, WayfarerConfig.class);
-            if (config == null)
-                return new WayfarerConfig();
-            if (config.classificationWidths == null || config.classificationWidths.isEmpty()) {
-                config.classificationWidths = defaultClassificationWidths();
-            }
-            if (config.hotkeys == null || config.hotkeys.isEmpty()) {
-                config.hotkeys = defaultHotkeys();
-            }
-            return config;
-        } catch (IOException e) {
-            return new WayfarerConfig();
-        }
-    }
-
     public void save() {
-        try {
-            Files.createDirectories(CONFIG_PATH.getParent());
-            Files.writeString(CONFIG_PATH, GSON.toJson(this), StandardCharsets.UTF_8);
-            instance = this;
-        } catch (IOException e) {
-            throw new IllegalStateException("Failed to save settings", e);
-        }
-    }
-
-    public Map<String, List<HotkeyBind>> getHotkeys() {
-        return hotkeys;
+        ((fi.dy.masa.malilib.config.ConfigManager)ConfigManager.getInstance()).saveAllConfigs();
     }
 
     public List<HotkeyBind> getHotkeysForAction(String action) {
-        List<HotkeyBind> binds = hotkeys.get(action);
-        return binds != null ? binds : Collections.emptyList();
+        if ("toggle_recording".equals(action)) {
+            return List.of(new HotkeyBind(WayfarerHotkeys.TOGGLE_RECORDING));
+        }
+        if ("open_menu".equals(action)) {
+            return List.of(new HotkeyBind(WayfarerHotkeys.OPEN_MENU));
+        }
+        return List.of();
     }
 
     /** 根据分级获取宽度 */
     public double getWidthForClassification(String classification) {
-        if (classification == null || classification.isEmpty())
+        if (classification == null || classification.isEmpty()) {
             return defaultWidth;
-        Double w = classificationWidths.get(classification);
-        return w != null ? w : defaultWidth;
-    }
-
-    public static LinkedHashMap<String, Double> defaultClassificationWidths() {
-        LinkedHashMap<String, Double> map = new LinkedHashMap<>();
-        map.put("G国道", 21.0);
-        map.put("G高速", 21.0);
-        map.put("S省道", 17.0);
-        map.put("S高架", 17.0);
-        map.put("X乡道", 13.0);
-        map.put("Y县道", 7.0);
-        map.put("C村道", 3.0);
-        return map;
-    }
-
-    public static Map<String, List<HotkeyBind>> defaultHotkeys() {
-        Map<String, List<HotkeyBind>> map = new LinkedHashMap<>();
-        map.put("toggle_recording", new ArrayList<>(List.of(new HotkeyBind(GLFW.GLFW_KEY_R, 0))));
-        map.put("open_menu", new ArrayList<>(List.of(new HotkeyBind(GLFW.GLFW_KEY_N, 0))));
-        return map;
+        }
+        Integer w = classificationWidths.get(classification);
+        return w != null ? w.doubleValue() : defaultWidth;
     }
 
     // --- HotkeyBind ---
@@ -147,13 +96,16 @@ public class WayfarerConfig {
             this.modifierScanCode = modifierScanCode;
         }
 
-        public String toDisplayString() {
-            String keyName = InputConstants.getKey(key, scanCode).getDisplayName().getString();
-            if (modifierKey > 0) {
-                String modName = InputConstants.getKey(modifierKey, modifierScanCode).getDisplayName().getString();
-                return modName + "+" + keyName;
+        public HotkeyBind(ConfigHotkey hotkey) {
+            IKeybind keybind = hotkey.getKeybind();
+            java.util.List<Integer> keys = keybind.getKeys();
+            if (!keys.isEmpty()) {
+                this.key = keys.get(0);
+            } else {
+                this.key = -1;
             }
-            return keyName;
+            this.scanCode = 0;
+            this.modifierKey = -1;
         }
     }
 }
